--- a/.github/workflows/publish-wiki.yml
+++ b/.github/workflows/publish-wiki.yml
@@ -26,14 +26,14 @@ jobs:
         run: |
           if [[ $(git diff --name-only HEAD^ HEAD) =~ ^docs/ ]]; then
             echo "docs folder has changed."
-            echo "modified=true" >> $GITHUB_ENV
+            echo "modified=true" >> $GITHUB_OUTPUT
           else
             echo "docs folder has not changed."
-            echo "modified=false" >> $GITHUB_ENV
+            echo "modified=false" >> $GITHUB_OUTPUT
           fi
 
       - name: Publish to wiki
-        if: env.modified == 'true'
+        if: steps.check_docs.outputs.modified == 'true'
         uses: Andrew-Chen-Wang/github-wiki-action@v4
         with:
           path: docs/
